--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "jshint": "^2.9.1",
-    "vinyl-source-stream": "^1.1.0",
-    "moment": "^2.12.0"
+    "moment": "^2.12.0",
+    "openlayers": "^3.14.2",
+    "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
